# finalproyectos

Ollama/: pyproject.toml
Ollama/db/5e5d937a-e9ad-4f4b-85af-f3eefc785984/: index_metadata.pickle
Ollama/final_p/: .env  app.py  requirements.txt
Ollama/final_p/db/: chroma.sqlite3
nube/: pyproject.toml
nube/__MACOSX/nube/: ._.env  ._main.py
