[tool.poetry]
name = "final-p"
version = "0.1.0"
description = ""
authors = ["juanchlo <juanandreschacon2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.1"
flask = "^3.0.3"
langchain-text-splitters = "^0.3.0"
pdfplumber = "^0.11.4"
chromadb = "^0.5.11"
langchain-ollama = "^0.2.0"
pypdf = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
