[tool.poetry]
name = "nube"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pyodbc = "^5.1.0"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.6.0"
streamlit = "^1.38.0"
tiktoken = "^0.7.0"
openai = "^1.50.1"
python-dotenv = "^1.0.1"
azure-search-documents = "^11.5.1"
azure-core = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
